# odri-spi-rpi

./: LICENSE  README.md  anticogging.py  anticogging_test.py  cogging_fft.py  odri_spi_rpi.py  pyproject.toml  spi_test.py
demos/: calibrate_offsets.py  controller_template.py  sinus_external_pd.py  sinus_local_pd.py  sinus_onboard_pd.py  sinus_onboard_pd_3turn_plot.py  sinus_remote_pd.py
src/: odri_spi_rpi.py
tests/: spi_test.py
