[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "odri_spi_rpi"
version = "0.0.1"
authors = [
  { name="Thomas Flayols", email="thomas.flayols@gmail.com" },
]
description = "Python library to access ODRI (Open Dynamic Robot Initiative) brushless drivers using directly SPI from a raspberry pi board."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thomasfla/odri-spi-rpi"
